--- a/watch.html
+++ b/watch.html
@@ -11,27 +11,22 @@
     <p>جارٍ تحميل البث المباشر...</p>
 </div>
 
-<div id="error-container" style="display:none"></div>
-
-<div class="match-info">
-    <h1 id="match-title"></h1>
-    <div class="teams">
-        <span id="home-name"></span> vs <span id="away-name"></span>
-    </div>
-    <div class="details">
-        <span id="league-name"></span> | <span id="match-time"></span>
-    </div>
-</div>
-
+<div id="match-title"></div>
+<div id="home-name"></div>
+<div id="away-name"></div>
+<div id="league-name"></div>
+<div id="match-time"></div>
+<div id="channel-name"></div>
+<img id="channel-logo" src="" alt="شعار القناة">
 <div id="player-container"></div>
-
+<footer>
 <!-- معلومات القناة (اختياري) -->
 <div class="channel-info">
     <img id="channel-logo" src="" alt="شعار القناة">
     <span id="channel-name"></span>
 </div>
 
-
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
