--- a/watch.html
+++ b/watch.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مشاهدة البث المباشر</title>
-    <link rel="stylesheet" href="css/watch.css">
+    <link rel="stylesheet" href="assets/css/watch.css">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
