--- a/watch.html
+++ b/watch.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بث مباشر - مباراة اليوم</title>
-  <link rel="stylesheet" href="assets/css/watch.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="assets/css/footer.css">
+  <link rel="stylesheet" href="assets/css/watch.css">
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
 </head>
+<body>
+  <!-- الهيدر -->
+  <header class="header">
+    <div class="logo">
+      <img src="assets/images/logo.png" alt="شعار الموقع">
+      <h1>البث المباشر</h1>
+    </div>
+    <nav class="nav">
+      <ul>
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="matches.html">المباريات</a></li>
+        <li><a href="news.html" class="active">الأخبار</a></li>
+        <li><a href="videos.html">الفيديوهات</a></li>
+      </ul>
+    </nav>
+    <div class="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
+  </header>
 <body>
     <div id="loading">
         <i class="fas fa-spinner fa-spin"></i> جاري تحميل بيانات المباراة...
