--- a/watch.html
+++ b/watch.html
@@ -45,7 +45,25 @@
         <h3>القنوات المتاحة:</h3>
         <div id="channel-list" class="channel-list"></div>
     </div>
+  <!-- الفوتر -->
+ <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="#top-of-page" class="logo-text">Foot TV</a>
+      
+    </div>
+    <div class="footer-links">
+      <a href="index.html"><i class="fas fa-home"></i> الرئيسية</a>
+      <a href="news.html"><i class="fas fa-newspaper"></i> الأخبار</a>
+      <a href="matches.html"><i class="fas fa-futbol"></i> المباريات</a>
+      <a href="videos.html"><i class="fas fa-video"></i> الفيديوهات</a>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>حقوق النشر © <span id="current-year"></span> Foot TV - جميع الحقوق محفوظة</p>
+  </div>
+</footer>
 
-    <script src="assets/js/watch.js"></script>
+  <script src="assets/js/watch.js"></script>
 </body>
 </html>
