--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/css/news.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
 </head>
 <body>
   <!-- الهيدر -->
