--- a/watch.html
+++ b/watch.html
@@ -18,10 +18,9 @@
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="index.html">الرئيسية</a></li>
-        <li><a href="matches.html">المباريات</a></li>
+        <li><a href="index.html">المباريات</a></li>
         <li><a href="news.html" class="active">الأخبار</a></li>
-        <li><a href="videos.html">الفيديوهات</a></li>
+        <li><a href="##">الفيديوهات</a></li>
       </ul>
     </nav>
     <div class="menu-toggle">
@@ -55,10 +54,9 @@
       
     </div>
     <div class="footer-links">
-      <a href="index.html"><i class="fas fa-home"></i> الرئيسية</a>
+      <a href="index.html"><i class="fas fa-home"></i>المباريات</a>
       <a href="news.html"><i class="fas fa-newspaper"></i> الأخبار</a>
-      <a href="matches.html"><i class="fas fa-futbol"></i> المباريات</a>
-      <a href="videos.html"><i class="fas fa-video"></i> الفيديوهات</a>
+      <a href="##"><i class="fas fa-video"></i> الفيديوهات</a>
     </div>
   </div>
   <div class="copyright">
