--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="index.html">المباريات<</a></li>
+        <li><a href="index.html">المباريات</a></li>
         <li><a href="news.html" class="active">الأخبار</a></li>
         <li><a href="##">الفيديوهات</a></li>
       </ul>
