--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>المباريات | Football Matches Tracker</title>
     <meta name="google-site-verification" content="aUZLpgHkGiNMC8ehFJ0FRlw4qDliVcZdekX9NL7t4pU" />
     <link rel="stylesheet" href="assets/css/matches.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
+     <!-- SEO -->
+  <meta name="description" content="موقع FootTV يقدم تغطية حصرية لأحدث مباريات كرة القدم وأخبار الفرق واللاعبين">
+  <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
+  <meta name="author" content="FootTV Team">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
+  <meta property="og:type" content="foot tv">
+  <meta property="og:url" content="https://foottv.info">
+  <meta property="og:image" content="assets/images/logo.png">
+<meta name="robots" content="index, follow">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta name="twitter:image" content="assets/images/logo.png">
 </head>
 <body>
     <header class="header">
