--- a/news.html
+++ b/news.html
@@ -9,6 +9,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
+   <meta name="description" content="موقع FootTV يقدم تغطية حصرية لأحدث مباريات كرة القدم وأخبار الفرق واللاعبين">
+  <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
+  <meta name="author" content="FootTV Team">
+  <meta name="robots" content="index, follow">
+  <!-- Open Graph -->
+  <meta property="og:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
+  <meta property="og:type" content="foot tv">
+  <meta property="og:url" content="https://foottv.info">
+  <meta property="og:image" content="assets/images/logo.png">
+<meta name="robots" content="index, follow">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta name="twitter:image" content="assets/images/logo.png">
+</head>
 </head>
 <body>
   <!-- الهيدر -->
