--- a/news.html
+++ b/news.html
@@ -24,6 +24,15 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="FootTV - أخبار ومباريات كرة القدم">
   <meta name="twitter:image" content="assets/images/logo.png">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GT-TNFMZ9KQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GT-TNFMZ9KQ');
+</script>
 </head>
 </head>
 <body>
