--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
     <p>حقوق النشر © <span id="current-year"></span> Foot TV - جميع الحقوق محفوظة</p>
   </div>
 </footer>
-
+     <script>
+  window.__VALID_ORIGIN__ = 'foottv.info'; // تعريف متغير التحقق
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+<script src="/dist/api-[contenthash].js"></script>
     <script type="module" src="assets/js/matches.js"></script>
 </body>
 </html>
