--- a/news.html
+++ b/news.html
@@ -135,7 +135,14 @@
     <p>حقوق النشر © <span id="current-year"></span> Foot TV - جميع الحقوق محفوظة</p>
   </div>
 </footer>
-
+<!-- Clarity tracking code for https://foottv.info/ -->
+<script>
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rffdaefoxa");
+</script>
   <script src="assets/js/news.js"></script>
 </body>
 </html>
