--- a/index.html
+++ b/index.html
@@ -121,7 +121,14 @@
      <script>
   window.__VALID_ORIGIN__ = 'foottv.info'; // تعريف متغير التحقق
 </script>
-
+<!-- Clarity tracking code for https://foottv.info/ -->
+<script>
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rffdaefoxa");
+</script>
     <script type="module" src="assets/js/matches.js"></script>
 </body>
 </html>
