--- a/highlights.html
+++ b/highlights.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ملخصات المباريات - Football Highlights</title>
-    <link rel="stylesheet" href="css/highlights.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/highlights.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -45,7 +46,6 @@
             <p>جميع حقوق النشر محفوظة &copy; <span id="year"></span></p>
         </div>
     </footer>
-
-    <script src="js/highlights.js"></script>
+     <script src="assets/js/highlights.js"></script>
 </body>
 </html>
