--- a/watch.html
+++ b/watch.html
@@ -30,7 +30,7 @@
       <ul>
         <li><a href="index.html">المباريات</a></li>
         <li><a href="news.html" class="active">الأخبار</a></li>
-        <li><a href="##">الفيديوهات</a></li>
+        <li><a href="highlights.html">الفيديوهات</a></li>
       </ul>
     </nav>
     <div class="menu-toggle">
