--- a/highlights.html
+++ b/highlights.html
@@ -31,14 +31,14 @@
     </header>
 
     <main class="container">
-        <div class="loading" id="loading">
-            <div class="spinner"></div>
-            <p>جاري تحميل الملخصات...</p>
-        </div>
+       <div id="loading">
+    <div class="spinner"></div>
+    <p>جارٍ تحميل الملخصات...</p>
+</div>
 
-        <div class="error-container" id="error-container" style="display:none"></div>
+<div id="error-container" style="display: none"></div>
 
-        <div class="highlights-grid" id="highlights-grid"></div>
+<div id="highlights-grid" class="highlights-grid"></div>
     </main>
 
     <footer class="highlights-footer">
