--- a/highlights.html
+++ b/highlights.html
@@ -111,5 +111,7 @@
             }, 1000);
         });
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXX"
+crossorigin="anonymous"></script>
 </body>
 </html>
