--- a/highlights.html
+++ b/highlights.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="adblock-detector" content="no-adblock">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ملخصات المباريات</title>
     <!-- تأكد من أن مسارات الملفات صحيحة -->
@@ -111,6 +112,11 @@
             }, 1000);
         });
     </script>
+    <script>
+if(typeof adsbygoogle === 'undefined') {
+    console.log("تم حظر الإعلانات، هذا لا يؤثر على وظيفة الموقع");
+}
+</script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXX"
 crossorigin="anonymous"></script>
 </body>
