--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>المباريات | Football Matches Tracker</title>
     <link rel="stylesheet" href="assets/css/matches.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <meta name="google-site-verification" content="KlRdhj9pQd6QnGiR7_RJYOwJpmK3wqw9qAQaGeVji48" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
      <!-- SEO -->
