--- a/highlights.html
+++ b/highlights.html
@@ -25,6 +25,7 @@
         <p>© 2025 موقعك الرياضي</p>
     </footer>
 
-<script type="module" src=".assets/js/highlights.js"></script> <!-- إذا كان في مجلد js -->
+    <script type="module" src="assets/js/highlights.js"></script>
+ <!-- إذا كان في مجلد js -->
 </body>
 </html>
