--- a/highlights.html
+++ b/highlights.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -5,27 +6,32 @@
     <meta name="adblock-detector" content="no-adblock">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ملخصات المباريات</title>
-    <!-- تأكد من أن مسارات الملفات صحيحة -->
+
+    <!-- الخطوط والأيقونات -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- ملفات التنسيق -->
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/highlights.css">
     <link rel="icon" href="assets/images/favicon.icon">
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
         <h1>📺 ملخصات أهم المباريات</h1>
     </header>
 
-    <main id="highlightsContainer" class="container">
-        <!-- يتم إدراج البطاقات هنا -->
+    <main class="container">
+        <div id="highlightsContainer">
+            <!-- سيتم إدراج الملخصات هنا عبر JavaScript -->
+        </div>
     </main>
 
     <footer>
         <p>© 2025 موقعك الرياضي</p>
     </footer>
 
+    <!-- سكريبت ملخصات -->
     <script type="module" src="assets/js/highlights.js"></script>
- <!-- إذا كان في مجلد js -->
 </body>
 </html>
