--- a/highlights.html
+++ b/highlights.html
@@ -21,8 +21,8 @@
         <h1>📺 ملخصات أهم المباريات</h1>
     </header>
 
-    <main class="container">
-        <div id="highlightsContainer">
+   <main id="leagues" class="container">
+
             <!-- سيتم إدراج الملخصات هنا عبر JavaScript -->
         </div>
     </main>
