--- a/highlights.html
+++ b/highlights.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/highlights.css">
     <link rel="icon" href="assets/images/favicon.icon">
+    <meta name="adsbygoogle" content="allow">
+
     <!-- خطوط وأيقونات -->
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script>
+if(typeof adsbygoogle === 'undefined') {
+    console.log("AdBlocker detected - Site will work normally without ads");
+}
+</script>
 </head>
 <body>
     <header class="header">
