--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>المباريات | Football Matches Tracker</title>
+      <link rel="canonical" href="https://foottv.info" />
     <link rel="stylesheet" href="assets/css/matches.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <meta name="google-site-verification" content="KlRdhj9pQd6QnGiR7_RJYOwJpmK3wqw9qAQaGeVji48" />
@@ -55,8 +56,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">المباريات</a></li>
-                <li><a href="news.html" class="active">الأخبار</a></li>
+                <li><a href="highlights.html">Highlights</a></li>
+                <li><a href="news.html" class="active">الأخبار كرة القدم</a></li>
             </ul>
         </nav>
     </header>
