--- a/highlights.html
+++ b/highlights.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ملخصات المباريات - متتبع المباريات</title>
     <!-- الروابط الأساسية -->
+    <link rel="canonical" href="https://foottv.info/highlights.html" />
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/highlights.css">
     <link rel="icon" href="assets/images/favicon.icon">
