--- a/watch.html
+++ b/watch.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://foottv.info/watch.html" />
   <link rel="stylesheet" href="assets/css/footer.css">
   <link rel="stylesheet" href="assets/css/watch.css">
   <meta name="google-site-verification" content="KlRdhj9pQd6QnGiR7_RJYOwJpmK3wqw9qAQaGeVji48" />
@@ -31,9 +32,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="index.html">المباريات</a></li>
-        <li><a href="news.html" class="active">الأخبار</a></li>
-        <li><a href="highlights.html">الفيديوهات</a></li>
+        <li><a href="index.html">Matches</a></li>
+        <li><a href="news.html" class="active">Football News</a></li>
+        <li><a href="highlights.html">Highlights</a></li>
       </ul>
     </nav>
     <div class="menu-toggle">
