--- a/news.html
+++ b/news.html
@@ -47,9 +47,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="index.html">المباريات</a></li>
-        <li><a href="news.html" class="active">الأخبار</a></li>
-        <li><a href="##">الفيديوهات</a></li>
+        <li><a href="index.html">Matches</a></li>
+        <li><a href="news.html" class="active">Football News</a></li>
+        <li><a href="highlights.html">Highlights</a></li>
       </ul>
     </nav>
     <div class="menu-toggle">
@@ -129,9 +129,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
     </div>
     <div class="footer-links">
-      <a href="index.html"><i class="fas fa-home"></i>المباريات</a>
-      <a href="news.html"><i class="fas fa-newspaper"></i>الأخبار</a>
-      <a href="##"><i class="fas fa-video"></i> الفيديوهات</a>
+      <a href="index.html"><i class="fas fa-home"></i>Matches</a>
+      <a href="news.html"><i class="fas fa-newspaper"></i>Football News</a>
+      <a href="highlights.html"><i class="fas fa-video"></i>Highlights</a>
     </div>
   </div>
   <div class="copyright">
