--- a/watch.html
+++ b/watch.html
@@ -9,9 +9,24 @@
   <meta name="google-site-verification" content="KlRdhj9pQd6QnGiR7_RJYOwJpmK3wqw9qAQaGeVji48" />
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-  <!-- Google Tag Manager -->
+   <meta name="description" content="موقع FootTV يقدم تغطية حصرية لأحدث مباريات كرة القدم وأخبار الفرق واللاعبين">
+  <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
+  <meta name="author" content="FootTV Team">
+  <meta name="robots" content="index, follow">
+  <!-- Open Graph -->
+  <meta property="og:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
+  <meta property="og:type" content="foot tv">
+  <meta property="og:url" content="https://foottv.info">
+  <meta property="og:image" content="assets/images/logo.png">
+<meta name="robots" content="index, follow">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta name="twitter:image" content="assets/images/logo.png">
+ <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
