--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <nav class="nav">
             <ul>
                 <li><a href="highlights.html">Highlights</a></li>
-                <li><a href="news.html" class="active">الأخبار كرة القدم</a></li>
+                <li><a href="news.html" class="active">Football News</a></li>
             </ul>
         </nav>
     </header>
@@ -121,9 +121,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
     </div>
     <div class="footer-links">
-      <a href="index.html"><i class="fas fa-home"></i> المباريات</a>
-      <a href="news.html"><i class="fas fa-newspaper"></i> الأخبار</a>
-      <a href="videos.html"><i class="fas fa-video"></i> الفيديوهات</a>
+      <a href="index.html"><i class="fas fa-home"></i>Matches</a>
+      <a href="news.html"><i class="fas fa-newspaper"></i>Football News</a>
+      <a href="highlights.html"><i class="fas fa-video"></i>Highlights</a>
     </div>
   </div>
   <div class="copyright">
