--- a/highlights.html
+++ b/highlights.html
@@ -6,10 +6,11 @@
     <title>ملخصات المباريات - متتبع المباريات</title>
     <!-- الروابط الأساسية -->
     <link rel="canonical" href="https://foottv.info/highlights.html" />
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/highlights.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/highlights.css">
     <link rel="icon" href="assets/images/favicon.icon">
     <meta name="adsbygoogle" content="allow">
+   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src *; media-src *; script-src 'self'">
 
     <!-- خطوط وأيقونات -->
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
