--- a/highlights.html
+++ b/highlights.html
@@ -6,8 +6,8 @@
     <title>ملخصات المباريات - متتبع المباريات</title>
     <!-- الروابط الأساسية -->
     <link rel="canonical" href="https://foottv.info/highlights.html" />
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/highlights.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/highlights.css">
     <link rel="icon" href="assets/images/favicon.icon">
     <meta name="adsbygoogle" content="allow">
    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src *; media-src *; script-src 'self'">
