--- a/highlights.html
+++ b/highlights.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self';
+               connect-src 'self' https://football-highlights-api.p.rapidapi.com;
+               script-src 'self' 'unsafe-inline';
+               style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+               font-src 'self' https://fonts.gstatic.com;
+               img-src 'self' data: https://*.youtube.com;
+               frame-src https://www.youtube.com;
+               object-src 'none'">
     <title>ملخصات المباريات</title>
     
     <!-- تأكد من صحة مسارات الملفات -->
