--- a/highlights.html
+++ b/highlights.html
@@ -7,12 +7,9 @@
    <meta http-equiv="Content-Security-Policy" 
       content="default-src 'self';
                connect-src 'self' https://football-highlights-api.p.rapidapi.com;
+               frame-src 'self' https://www.youtube.com;
                script-src 'self' 'unsafe-inline';
-               style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-               font-src 'self' https://fonts.gstatic.com;
-               img-src 'self' data: https://*.youtube.com;
-               frame-src https://www.youtube.com;
-               object-src 'none'">
+               style-src 'self' 'unsafe-inline'">
     <title>ملخصات المباريات</title>
     
     <!-- تأكد من صحة مسارات الملفات -->
