--- a/highlights.html
+++ b/highlights.html
@@ -22,6 +22,10 @@
     </header>
     
     <main>
+          <div id="loading" class="loading-indicator" style="display: none;">
+      <div class="loader"></div>
+      <p>جاري تحميل الأخبار...</p>
+    </div>
         <div id="highlights-container"></div>
     </main>
     
