--- a/news.html
+++ b/news.html
@@ -14,6 +14,7 @@
   <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
   <meta name="author" content="FootTV Team">
   <meta name="robots" content="index, follow">
+  <script type='text/javascript' src='//pl26330988.profitableratecpm.com/31/36/42/3136423ba8e56051368cedef08742e2e.js'></script>
   <!-- Open Graph -->
   <meta property="og:title" content="FootTV - أخبار ومباريات كرة القدم">
   <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
