--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type='text/javascript' src='//pl26330988.profitableratecpm.com/31/36/42/3136423ba8e56051368cedef08742e2e.js'></script>
      <!-- SEO -->
   <meta name="description" content="موقع FootTV يقدم تغطية حصرية لأحدث مباريات كرة القدم وأخبار الفرق واللاعبين">
-  <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
+  <meta name="keywords" content="96tv,كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
   <meta name="author" content="FootTV Team">
 
   <!-- Open Graph -->
