--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, 96tv, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
     <meta name="author" content="FootTV Team">
     <link rel="canonical" href="https://foottv.info">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
     <meta name="robots" content="index, follow">
 
     <meta property="og:title" content="FootTV - مباريات كرة القدم مباشرة">
