--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مباريات اليوم | FootTV</title>
+    <title>FootTV</title>
     
     <meta name="description" content="موقع FootTV يقدم تغطية مباشرة وحصرية لأهم مباريات كرة القدم اليوم وغداً، بالإضافة إلى أخبار الفرق واللاعبين.">
     <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, 96tv, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
