--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FootTV</title>
+    <title>كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live</title>
     
-    <meta name="description" content="موقع FootTV يقدم تغطية مباشرة وحصرية لأهم مباريات كرة القدم اليوم وغداً، بالإضافة إلى أخبار الفرق واللاعبين.">
-    <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, 96tv, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
+    <meta name="description" content="موقع FootTV كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live · جدول المباريات · آخر الأخبار الرياضية - koora live. › موعد قرعة دوري أبطال أوروبا موسم 2025/">
+    <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, tv96, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
     <meta name="author" content="FootTV Team">
     <link rel="canonical" href="https://foottv.info">
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
