--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
-   <meta name="description" content="موقع FootTV يقدم تغطية حصرية لأحدث مباريات كرة القدم وأخبار الفرق واللاعبين">
+   <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
   <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
   <meta name="author" content="FootTV Team">
   <meta name="robots" content="index, follow">
@@ -19,7 +19,7 @@
   <meta property="og:title" content="FootTV - أخبار ومباريات كرة القدم">
   <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
   <meta property="og:type" content="foot tv">
-  <meta property="og:url" content="https://foottv.info">
+  <meta property="og:url" content="https://www.foottv.info">
   <meta property="og:image" content="assets/images/logo.png">
 <meta name="robots" content="index, follow">
   <!-- Twitter -->
