--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
     <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, tv96, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
-    <link rel="canonical" href="https://foottv.info/index.html">
+    <link rel="canonical" href="https://foottv.info">
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
     <meta name="robots" content="index, follow">
 
