--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>أخبار كرة القدم | Football News</title>
-  <link rel="canonical" href="https://foottv.info/news.html">
+  <link rel="canonical" href="https://foottv.info">
   <link rel="stylesheet" href="assets/css/footer.css">
   <link rel="stylesheet" href="assets/css/news.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
   <meta name="robots" content="index, follow">
   <script type='text/javascript' src='//pl26330988.profitableratecpm.com/31/36/42/3136423ba8e56051368cedef08742e2e.js'></script>
   <!-- Open Graph -->
-  <meta property="og:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta property="og:title" content="FootTV - كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live">
   <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
   <meta property="og:type" content="foot tv">
   <meta property="og:url" content="https://www.foottv.info">
