--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live</title>
     
-    <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
+    <meta name="description" content="كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live">
     <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, tv96, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
     <link rel="canonical" href="https://foottv.info">
