--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live">
     <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, tv96, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
-    <link rel="canonical" href="https://foottv.info">
+    <link rel="canonical" href="https://foottv.info/" />
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
     <meta name="robots" content="index, follow">
 
