--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>أخبار كرة القدم | Football News</title>
-  <link rel="canonical" href="https://foottv.info">
+  <link rel="canonical" href="https://foottv.info/news.html" />
   <link rel="stylesheet" href="assets/css/footer.css">
   <link rel="stylesheet" href="assets/css/news.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
