--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>أخبار كرة القدم | Football News</title>
-  <link rel="canonical" href="https://foottv.info/news.html" />
+  <link rel="canonical" href="https://koralive.football/news.html" />
   <link rel="stylesheet" href="assets/css/footer.css">
   <link rel="stylesheet" href="assets/css/news.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -16,30 +16,21 @@
   <meta name="robots" content="index, follow">
   <script type='text/javascript' src='//pl26330988.profitableratecpm.com/31/36/42/3136423ba8e56051368cedef08742e2e.js'></script>
   <!-- Open Graph -->
-  <meta property="og:title" content="FootTV - كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live">
+  <meta property="og:title" content="">
   <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
-  <meta property="og:type" content="foot tv">
-  <meta property="og:url" content="https://www.foottv.info">
+  <meta property="og:type" content="Koralive - كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live">
+  <meta property="og:url" content="https://koralive.football">
   <meta property="og:image" content="assets/images/logo.png">
 <meta name="robots" content="index, follow">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="FootTV - أخبار ومباريات كرة القدم">
+  <meta name="twitter:title" content="koralive - أخبار ومباريات كرة القدم">
   <meta name="twitter:image" content="assets/images/logo.png">
- <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KLKK77DT');</script>
-<!-- End Google Tag Manager -->
+
 </head>
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLKK77DT"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  
   <!-- الهيدر -->
   <header class="header">
     <div class="logo">
@@ -133,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
   <div class="copyright">
-    <p>حقوق النشر © <span id="current-year"></span> Foot TV - جميع الحقوق محفوظة</p>
+    <p>حقوق النشر © <span id="current-year"></span> Kora Live - جميع الحقوق محفوظة</p>
   </div>
 </footer>
 
