--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الصفحة غير موجودة | FootTV</title>
+    <title>الصفحة غير موجودة | Koralive</title>
     
     <!-- استيراد الخطوط والأيقونات -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright © <span id="current-year"></span> FootTV - All rights reserved</p>
+            <p>Copyright © <span id="current-year"></span> Kora Live - All rights reserved</p>
         </div>
     </footer>
 
