--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <a href="#" class="logo-text">FootTV</a>
+                <a href="#" class="logo-text">Kora Live</a>
             </div>
             <div class="footer-links">
                 <a href="index.html"><i class="fas fa-home" aria-hidden="true"></i> Matches</a>
