--- a/news.html
+++ b/news.html
@@ -12,9 +12,9 @@
   <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
    <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
   <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
-  <meta name="author" content="FootTV Team">
+  <meta name="author" content="koralive Team">
   <meta name="robots" content="index, follow">
-  <script type='text/javascript' src='//pl26330988.profitableratecpm.com/31/36/42/3136423ba8e56051368cedef08742e2e.js'></script>
+  <script type='text/javascript' src='//pl27749993.revenuecpmgate.com/cd/63/af/cd63afe2e01f3ca410d046a3e7e0b784.js'></script>
   <!-- Open Graph -->
   <meta property="og:title" content="">
   <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
