--- a/news.html
+++ b/news.html
@@ -129,5 +129,6 @@
 </footer>
 
   <script src="assets/js/news.js"></script>
+  <script type='text/javascript' src='//pl27749999.revenuecpmgate.com/52/78/3c/52783c8a8062307c66371da73d0bae78.js'></script>
 </body>
 </html>
