--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <div class="logo">
             <img src="assets/images/logo.png" alt="FootTV Logo" loading="lazy" width="60" height="60">
             <h1>Football Matches</h1>
+            <h1>كورة لايف</h1>
+            <h1>Koora Live</h1>
+            <h1>Kora Live</h1>
+
         </div>
         <nav class="nav">
             <ul>
