--- a/news.html
+++ b/news.html
@@ -36,6 +36,9 @@
     <div class="logo">
       <img src="assets/images/logo.png" alt="شعار الموقع">
       <h1>أخبار كرة القدم</h1>
+      <h1>كورة لايف</h1>
+      <h1>Koora Live</h1>
+      <h1>Kora Live</h1>
     </div>
     <nav class="nav">
       <ul>
