--- a/news.html
+++ b/news.html
@@ -3,46 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>أخبار كرة القدم | Football News</title>
+  <title>أخبار كرة القدم | KoraLive</title>
   <link rel="canonical" href="https://koralive.football/news.html" />
   <link rel="stylesheet" href="assets/css/footer.css">
   <link rel="stylesheet" href="assets/css/news.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
-   <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
-  <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز">
-  <meta name="author" content="koralive Team">
+  <meta name="description" content="KoraLive - تغطية حصرية لأحدث أخبار ومباريات كرة القدم، الانتقالات، الدوريات الكبرى، وكل ما يتعلق بكرة القدم العالمية والعربية.">
+  <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز, كورة لايف, koralive, بث مباشر, انتقالات, إصابات, دوري أبطال أوروبا">
+  <meta name="author" content="KoraLive Team">
   <meta name="robots" content="index, follow">
-  <script type='text/javascript' src='//pl27749993.revenuecpmgate.com/cd/63/af/cd63afe2e01f3ca410d046a3e7e0b784.js'></script>
-  <!-- Open Graph -->
-  <meta property="og:title" content="">
+  
+  <meta property="og:title" content="KoraLive - أخبار كرة القدم والمباريات">
   <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
-  <meta property="og:type" content="Koralive - كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live">
-  <meta property="og:url" content="https://koralive.football">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://koralive.football/news.html">
   <meta property="og:image" content="assets/images/logo.png">
-<meta name="robots" content="index, follow">
-  <!-- Twitter -->
+  
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="koralive - أخبار ومباريات كرة القدم">
+  <meta name="twitter:title" content="KoraLive - أخبار ومباريات كرة القدم">
+  <meta name="twitter:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
   <meta name="twitter:image" content="assets/images/logo.png">
 
-</head>
+  <script type='text/javascript' src='//pl27749993.revenuecpmgate.com/cd/63/af/cd63afe2e01f3ca410d046a3e7e0b784.js'></script>
 </head>
 <body>
   
-  <!-- الهيدر -->
   <header class="header">
     <div class="logo">
-      <img src="assets/images/logo.png" alt="شعار الموقع">
-      <h1>أخبار كرة القدم</h1>
-      <h1>كورة لايف</h1>
-      <h1>Koora Live</h1>
-      <h1>Kora Live</h1>
+      <img src="assets/images/logo.png" alt="شعار KoraLive">
+      <h1>KoraLive</h1> 
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="index.html">Matches</a></li>
+        <li><a href="index.html">المباريات</a></li>
+        <li><a href="news.html">الأخبار</a></li>
       </ul>
     </nav>
     <div class="menu-toggle">
@@ -50,18 +46,14 @@
     </div>
   </header>
 
-  <!-- المحتوى الرئيسي -->
   <main class="news-main">
-    <!-- مؤشر التحميل -->
     <div id="loading" class="loading-indicator" style="display: none;">
       <div class="loader"></div>
       <p>جاري تحميل الأخبار...</p>
     </div>
 
-    <!-- عرض الأخطاء -->
     <div id="error-container"></div>
 
-    <!-- قسم الأخبار العاجلة -->
     <section class="breaking-news-section">
       <div class="section-header">
         <h2 class="section-title">
@@ -69,11 +61,9 @@
         </h2>
       </div>
       <div id="breaking-news" class="breaking-news-grid">
-        <!-- سيتم تعبئتها بواسطة JavaScript -->
-      </div>
+        </div>
     </section>
 
-    <!-- شريط البحث والتصنيفات -->
     <section class="search-section">
       <div class="search-container">
         <input type="text" id="news-search" placeholder="ابحث في الأخبار...">
@@ -85,53 +75,61 @@
         <button class="category-btn active" data-category="all">
           <i class="fas fa-newspaper"></i> الكل
         </button>
-        <button class="category-btn" data-category="transfers">
-          <i class="fas fa-exchange-alt"></i> انتقالات
+        <button class="category-btn" data-category="latest-news">
+          <i class="fas fa-history"></i> آخر الأخبار
         </button>
-        <button class="category-btn" data-category="matches">
-          <i class="fas fa-futbol"></i> مباريات
+        <button class="category-btn" data-category="barcelona">
+          <i class="fas fa-futbol"></i> برشلونة
         </button>
-        <button class="category-btn" data-category="injuries">
-          <i class="fas fa-user-injured"></i> إصابات
+        <button class="category-btn" data-category="real-madrid">
+          <i class="fas fa-crown"></i> ريال مدريد
+        </button>
+        <button class="category-btn" data-category="epl">
+          <i class="fas fa-trophy"></i> الدوري الإنجليزي
+        </button>
+        <button class="category-btn" data-category="laliga">
+          <i class="fas fa-trophy"></i> الدوري الإسباني
+        </button>
+        <button class="category-btn" data-category="champions-league">
+          <i class="fas fa-star"></i> دوري الأبطال
         </button>
       </div>
     </section>
 
-    <!-- قسم الأخبار الرياضية -->
     <section class="sports-news-section">
       <div class="section-header">
         <h2 class="section-title">
           <i class="fas fa-futbol"></i> أخبار الرياضة
         </h2>
-        <a href="#" class="view-all">عرض الكل <i class="fas fa-arrow-left"></i></a>
-      </div>
+        </div>
       <div id="sports-news" class="sports-news-grid">
-        <!-- سيتم تعبئتها بواسطة JavaScript -->
-      </div>
+        </div>
       <button id="load-more" class="load-more-btn">
         <i class="fas fa-plus"></i> تحميل المزيد
       </button>
     </section>
   </main>
 
-  <!-- الفوتر -->
- <footer class="footer">
+  <footer class="footer">
     <div class="footer-content">
       <div class="footer-logo">
-        <a href="#top-of-page" class="logo-text">Foot TV</a>
-      
+        <a href="index.html" class="logo-text">KoraLive</a>
+      </div>
+      <div class="footer-links">
+        <a href="index.html"><i class="fas fa-home"></i>المباريات</a>
+        <a href="news.html"><i class="fas fa-newspaper"></i>أخبار كرة القدم</a>
+      </div>
     </div>
-    <div class="footer-links">
-      <a href="index.html"><i class="fas fa-home"></i>Matches</a>
-      <a href="news.html"><i class="fas fa-newspaper"></i>Football News</a>
+    <div class="copyright">
+      <p>حقوق النشر © <span id="current-year"></span> Kora Live - جميع الحقوق محفوظة</p>
     </div>
-  </div>
-  <div class="copyright">
-    <p>حقوق النشر © <span id="current-year"></span> Kora Live - جميع الحقوق محفوظة</p>
-  </div>
-</footer>
+  </footer>
 
   <script src="assets/js/news.js"></script>
+  <script>
+    // تحديث السنة في الفوتر تلقائيًا
+    document.getElementById('current-year').textContent = new Date().getFullYear();
+  </script>
   <script type='text/javascript' src='//pl27749999.revenuecpmgate.com/52/78/3c/52783c8a8062307c66371da73d0bae78.js'></script>
 </body>
 </html>
