--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
     <!-- Meta Tags -->
     <meta name="description" content="KoraLive - تابع آخر أخبار كرة القدم، الانتقالات، ونتائج المباريات من الدوريات العالمية والعربية.">
     <meta name="author" content="KoraLive Team">
@@ -92,4 +92,3 @@
     <script type="module" src="assets/js/news.js"></script>
 </body>
 </html>
-
