--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live</title>
+    <title>كورة لايف | koora live - مباريات اليوم بث مباشر kora live</title>
     
-    <meta name="description" content="كورة لايف | koora live | بث مباشر مباريات اليوم جوال kora live">
-    <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, tv96, كرة قدم, أخبار رياضية, الدوري السعودي, دوري أبطال أوروبا">
+    <meta name="description" content="كورة لايف | koora live - مباريات اليوم بث مباشر kora live">
+    <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, tv96, كرة قدم, الدوري الاسباني, الدوري السعودي, دوري أبطال أوروبا">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
     <link rel="canonical" href="https://koralive.football" />
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
@@ -36,7 +36,7 @@
             <img src="assets/images/logo.png" alt="FootTV Logo" loading="lazy" width="60" height="60">
             <h1>Football Matches</h1>
             <h1>كورة لايف</h1>
-            <h1>Koora Live</h1>
+            <h1>-</h1>
             <h1>Kora Live</h1>
 
         </div>
