--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أخبار كرة القدم | KoraLive</title>
+    <title>أخبار كرة القدم | Football News</title>
     <link rel="canonical" href="https://koralive.football/news.html" />
     <link rel="stylesheet" href="assets/css/news.css">
     <link rel="stylesheet" href="assets/css/footer.css">
@@ -19,12 +19,11 @@
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" alt="شعار KoraLive">
-            <h1>KoraLive News</h1>
+            <h1>Kora Live News</h1>
         </div>
         <nav class="nav">
             <ul>
                 <li><a href="index.html">المباريات</a></li>
-                <li><a href="news.html" class="active">الأخبار</a></li>
             </ul>
         </nav>
     </header>
@@ -73,22 +72,21 @@
         </section>
     </main>
 
-    <footer class="footer">
-        <div class="footer-content">
-            <a href="index.html" class="logo-text">KoraLive</a>
-            <div class="footer-links">
-                <a href="index.html"><i class="fas fa-home"></i> المباريات</a>
-                <a href="news.html"><i class="fas fa-newspaper"></i> الأخبار</a>
-            </div>
-        </div>
-        <div class="copyright">
-            <p>حقوق النشر © <span id="current-year"></span> KoraLive - جميع الحقوق محفوظة</p>
-        </div>
-    </footer>
-
-    <script>
-        document.getElementById('current-year').textContent = new Date().getFullYear();
-    </script>
-    <script type="module" src="assets/js/news.js"></script>
+     <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="#top-of-page" class="logo-text">Kora Live</a>
+    </div>
+    <div class="footer-links">
+      <a href="index.html"><i class="fas fa-home"></i>Matches</a>
+      <a href="news.html"><i class="fas fa-newspaper"></i>Football News</a>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>حقوق النشر © <span id="current-year"></span> Kora Live - جميع الحقوق محفوظة</p>
+  </div>
+</footer>
+  <script src="assets/js/news.js"></script>
+  <script type='text/javascript' src='//pl27749999.revenuecpmgate.com/52/78/3c/52783c8a8062307c66371da73d0bae78.js'></script>
 </body>
 </html>
