--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>كورة لايف | koora live - مباريات اليوم بث مباشر kora live</title>
     
     <meta name="description" content="كورة لايف | koora live - مباريات اليوم بث مباشر kora live">
-    <meta name="keywords" content="مباريات اليوم, مباريات الغد, بث مباشر, كورة لايف, يلا شوت, tv96, كرة قدم, الدوري الاسباني, الدوري السعودي, دوري أبطال أوروبا">
+    <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
     <link rel="canonical" href="https://koralive.football" />
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
