--- a/news.html
+++ b/news.html
@@ -19,11 +19,12 @@
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" alt="شعار KoraLive">
-            <h1>Kora Live News</h1>
+            
         </div>
         <nav class="nav">
+            <h1>Kora Live News</h1>
             <ul>
-                <li><a href="index.html">المباريات</a></li>
+                <li><a href="index.html">Matches</a></li>
             </ul>
         </nav>
     </header>
