--- a/news.html
+++ b/news.html
@@ -14,6 +14,15 @@
     <meta name="description" content="KoraLive - تابع آخر أخبار كرة القدم، الانتقالات، ونتائج المباريات من الدوريات العالمية والعربية.">
     <meta name="author" content="KoraLive Team">
     <meta name="robots" content="index, follow">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVZ7KRDPEW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LVZ7KRDPEW');
+</script>
 </head>
 <body>
     <header class="header">
