--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>كورة لايف | koora live - مباريات اليوم بث مباشر kora live</title>
+    <title>كورة لايف | kora live | مباريات اليوم بث مباشر koora live</title>
     
-    <meta name="description" content="كورة لايف | koora live - مباريات اليوم بث مباشر kora live">
+    <meta name="description" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live">
     <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
     <link rel="canonical" href="https://koralive.football" />
