--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الصفحة غير موجودة | Koralive</title>
+    <script type='text/javascript' src='//pl27749993.revenuecpmgate.com/cd/63/af/cd63afe2e01f3ca410d046a3e7e0b784.js'></script>
     
     <!-- استيراد الخطوط والأيقونات -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
@@ -84,7 +85,7 @@
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" alt="FootTV Logo">
-            <h1>FootTV</h1>
+            <h1>Kora Live</h1>
         </div>
         <nav class="nav">
             <ul>
@@ -126,6 +127,6 @@
     <script>
         document.getElementById('current-year').textContent = new Date().getFullYear();
     </script>
-    
+    <script type='text/javascript' src='//pl27749999.revenuecpmgate.com/52/78/3c/52783c8a8062307c66371da73d0bae78.js'></script>
 </body>
 </html>
