--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live">
     <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
-    <link rel="canonical" href="https://koralive.football" />
+    <link rel="canonical" href="https://koralive.football/" >
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
     <meta name="robots" content="index, follow">
 
