--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>كورة لايف | kora live | مباريات اليوم بث مباشر koora live</title>
     
     <meta name="description" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live">
-    <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الوطني الإنجليزي · الدوري الوطني الإنجليزي ش/ج · قناة النصر · الدوري ...">
+    <meta name="description" content="المسابقات · دوري أبطال أوروبا UEFA · الدوري الإسباني · FIFA Club World Cup™ · FIFA+ · الدوري الإنجليزي · الدوري الإسباني ش/ج · bein sports · الدوري الفرنسي ...">
     <meta name="author" content="Programme TV foot des matchs : date, chaîne, horaire">
     <link rel="canonical" href="https://koralive.football/" >
     <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
