--- a/news.html
+++ b/news.html
@@ -3,18 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أخبار كرة القدم | Football News</title>
+
+    <!-- ====================================================== -->
+    <!-- === وسوم SEO الأساسية لصفحة الأخبار === -->
+    <!-- ====================================================== -->
+
+    <!-- 1. العنوان: مخصص لصفحة الأخبار -->
+    <title>آخر أخبار كرة القدم | KoraLive</title>
+
+    <!-- 2. الوصف: يركز على محتوى الأخبار -->
+    <meta name="description" content="تابع آخر أخبار كرة القدم على KoraLive، بما في ذلك أخبار الانتقالات، نتائج المباريات، وتغطية حصرية للدوريات العالمية والعربية.">
+
+    <!-- 3. الكلمات المفتاحية (اختياري) -->
+    <meta name="keywords" content="أخبار كرة القدم, انتقالات اللاعبين, koralive, أخبار الكورة, نتائج المباريات, الدوري الإنجليزي, دوري أبطال أوروبا">
+
+    <!-- 4. رابط النسخة الرسمية لهذه الصفحة -->
     <link rel="canonical" href="https://koralive.football/news.html" />
+
+    <!-- ====================================================== -->
+    <!-- === وسوم Open Graph (للمشاركة على فيسبوك وواتساب) === -->
+    <!-- ====================================================== -->
+
+    <meta property="og:title" content="آخر أخبار كرة القدم على KoraLive"/>
+    <meta property="og:description" content="تغطية شاملة لأخبار الانتقالات، نتائج المباريات، وكل ما هو جديد في عالم كرة القدم."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://koralive.football/news.html"/>
+    <meta property="og:image" content="https://koralive.football/assets/images/logo.png"/>
+    <meta property="og:locale" content="ar_AR"/>
+
+    <!-- ====================================================== -->
+    <!-- === وسوم Twitter Card (للمشاركة على تويتر) === -->
+    <!-- ====================================================== -->
+    
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="آخر أخبار كرة القدم على KoraLive"/>
+    <meta name="twitter:description" content="تغطية شاملة لأخبار الانتقالات، نتائج المباريات، وكل ما هو جديد في عالم كرة القدم."/>
+    <meta name="twitter:image" content="https://koralive.football/assets/images/logo.png"/>
+
+    <!-- ====================================================== -->
+    <!-- === بقية الوسوم التقنية وروابط التصميم === -->
+    <!-- ====================================================== -->
+
+    <meta name="author" content="KoraLive Team">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <meta name="robots" content="index, follow">
+
+    <!-- روابط CSS والخطوط -->
     <link rel="stylesheet" href="assets/css/news.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
-    <!-- Meta Tags -->
-    <meta name="description" content="KoraLive - تابع آخر أخبار كرة القدم، الانتقالات، ونتائج المباريات من الدوريات العالمية والعربية.">
-    <meta name="author" content="KoraLive Team">
-    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVZ7KRDPEW"></script>
 <script>
