--- a/news.html
+++ b/news.html
@@ -47,6 +47,9 @@
     <meta name="author" content="KoraLive Team">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <meta name="robots" content="index, follow">
+    
+    <!-- === التحديث هنا: تمت إضافة هذا السطر لحل مشكلة المحتوى المختلط === -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <!-- روابط CSS والخطوط -->
     <link rel="stylesheet" href="assets/css/news.css">
