--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" alt="koralive Logo" loading="lazy" width="60" height="60">
-            <h1><a href="index.html" class="active">Football Matches</h1>
+            <h1>Football Matches</h1>
             <h1>-</h1>
-            <h1><a href="index.html" class="active">Kora Live</h1>
-            <h1><a href="index.html" class="active">كورة لايف</h1>
+           <a href="https://koralive.football/" class="logo" style="text-decoration: none; color: inherit;">
+    <img src="assets/images/logo.png" alt="KoraLive Logo" loading="lazy" width="60" height="60">
+    <!-- تم دمج النصوص في عنوان واحد لتحسين SEO -->
+    <h1>KoraLive</h1>
+</a>
+
+            <h1>كورة لايف</h1>
 
         </div>
         <nav class="nav">
