--- a/yalla-shoot-tv.html
+++ b/yalla-shoot-tv.html
@@ -148,12 +148,12 @@
             <div class="footer-logo">
                 <a href="#" class="logo-text">Kora Live</a>
             </div>
-               <!-- الجزء الجديد: قوائم الروابط -->
-     <!-- الجزء العلوي من الفوتر -->
-    <div class="footer-content">
-        <div class="footer-logo">
-            <a href="https://koralive.football/" class="logo-text">Kora Live</a>
+               
+        <div class="footer-links">
+            <a href="news.html"><i class="fas fa-newspaper"></i> Football News</a>
+            <a href="index.html"><i class="fas fa-home"></i> Matches</a>
         </div>
+    </div>
 
     <!-- الجزء الجديد: قوائم الروابط (تم تحديث الروابط لتكون داخلية) -->
     <div class="footer-extra-links">
@@ -170,7 +170,7 @@
             <ul class="widget-menu">
                 <li><a href="/yalla-live.html">يلا لايف – yalla live</a></li>
                 <li><a href="/koora-extra.html">كورة اكسترا – koora extra</a></li>
-                <li><a href="/">يلا شوت تيفي – Yalla Shoot TV</a></li>
+                <li><a href="/yalla-shoot-tv.html">يلا شوت تيفي – Yalla Shoot TV</a></li>
             </ul>
         </div>
         <div class="footer-widget">
@@ -190,20 +190,6 @@
             </ul>
         </div>
     </div>
-        <div class="footer-widget">
-            <h3 class="widget-title">kooralive</h3>
-            <ul class="widget-menu">
-                <li><a href="https://www.liveskoora.com/livehd7/">livehd7 – الاسطورة لبث المباريات</a></li>
-                <li><a href="https://www.liveskoora.com/buzkora/">بوز كورة – buzkora</a></li>
-                <li><a href="https://www.liveskoora.com/syria-live/">سوريا لايف | Syria Live</a></li>
-            </ul>
-        </div>
-    </div>
-            <div class="footer-links">
-                <a href="index.html"><i class="fas fa-home" aria-hidden="true"></i> Matches</a>
-                <a href="news.html"><i class="fas fa-newspaper" aria-hidden="true"></i> Football News</a>
-            </div>
-        </div>
         <div class="copyright">
             <p>Copyright © <span id="current-year"></span> Koralive - All rights reserved</p>
         </div>
